added flex functionality to text

--- a/05 - Flex Panel Gallery/jojoFlex.html
+++ b/05 - Flex Panel Gallery/jojoFlex.html
@@ -26,6 +26,7 @@
     .panels {
       min-height: 100vh;
       overflow: hidden;
+      display: flex;
     }
 
     .panel {
@@ -43,12 +44,18 @@
       font-size: 20px;
       background-size: cover;
       background-position: center;
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      /* Default flex direction is horizontal, set flex direction to flex vertically */
+      flex-direction: column;
     }
 
-    .panel1 { background-image:url(https://source.unsplash.com/gYl-UtwNg_I/1500x1500); }
+    .panel1 { background-image:url(https://i.imgur.com/OfANutC.jpg); }
     .panel2 { background-image:url(https://source.unsplash.com/rFKUFzjPYiQ/1500x1500); }
-    .panel3 { background-image:url(https://images.unsplash.com/photo-1465188162913-8fb5709d6d57?ixlib=rb-0.3.5&q=80&fm=jpg&crop=faces&cs=tinysrgb&w=1500&h=1500&fit=crop&s=967e8a713a4e395260793fc8c802901d); }
-    .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
+    .panel3 { background-image:url(https://i.ytimg.com/vi/HNM-hT7lzpA/maxresdefault.jpg); }
+    .panel4 { background-image:url(https://miro.medium.com/max/2560/0*SBd39aK5BjxL8W8N.jpg); }
     .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
 
     /* Flex Children */
@@ -56,7 +63,19 @@
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
+      flex: 1 0 auto;
+      display: flex;
+      justify-content: center;
+      border: 1px solid red;
+      align-items: center;
     }
+
+    /* select all *first-child elements where the parent is a .panel <div> element */
+    .panel > *:first-child { transform: translateY(-100%); }
+    .panel.open-active > *:first-child{ transform: translateY(0); }
+    .panel > *:last-child { transform: translateY(100%); }
+    .panel.open-active > *:last-child{ transform: translateY(0); }    
+
 
     .panel p {
       text-transform: uppercase;
@@ -70,6 +89,7 @@
     }
 
     .panel.open {
+      flex: 5;
       font-size: 40px;
     }
 
@@ -78,34 +98,49 @@
 
   <div class="panels">
     <div class="panel panel1">
-      <p>Hey</p>
-      <p>Let's</p>
-      <p>Dance</p>
+      <p>Il</p>
+      <p>Vento</p>
+      <p>D'oro</p>
     </div>
     <div class="panel panel2">
-      <p>Give</p>
-      <p>Take</p>
-      <p>Receive</p>
+      <p>damn</p>
+      <p>check out dat</p>
+      <p>wood</p>
     </div>
     <div class="panel panel3">
-      <p>Experience</p>
-      <p>It</p>
-      <p>Today</p>
+      <p>I Giorno Giovanna</p>
+      <p>have a </p>
+      <p>Dream</p>
     </div>
     <div class="panel panel4">
-      <p>Give</p>
-      <p>All</p>
-      <p>You can</p>
+      <p></p>
+      <p>Gangstars</p>
+      <p></p>
     </div>
     <div class="panel panel5">
-      <p>Life</p>
-      <p>In</p>
-      <p>Motion</p>
+      <p>blah</p>
+      <p>blah</p>
+      <p>blah</p>
     </div>
   </div>
 
   <script>
+    const panels = document.querySelectorAll('.panel');
 
+    function toggleOpen() {
+      this.classList.toggle('open');
+    }
+
+    function toggleActive(e){
+      console.log(e.propertyName);
+      if (e.propertyName.includes('flex')){
+        this.classList.toggle('open-active');  
+      }
+      
+    }
+
+    panels.forEach(panel => panel.addEventListener('click', toggleOpen));
+    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive))
   </script>
 
 
